--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 <h1>I'm Peter</h1>
 <p>a <span class="pro">pro</span>grammer</p>
 <img src="images/cloud.png" alt="cloud-image" class="b-cloud">
-<img src="profile.PNG">
-<!--fonts-->
+<img src="images/profile.png" alt="">
 <h2>Hello💗</h2>
   <h2>My Name Is Peter Melad</h2>
 <p><i>student at <strong>computer science and AI Helwan university</strong></i></p>
