--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     petermelad404@gmail.com
   </p>
 <hr>
+  <h2>If u wanna sending me a mail</h2>
   <form class="" action="mailto:petermelad404@gmail.com" method="post">
     <label>your name</label>
     <input type="text" name="yourname" value=""><br />
